      of query.options() on secondary loads overall [ticket:1461].
        
    - Fixed another 0.5.4 bug whereby mutable attributes (i.e. PickleType)
      wouldn't be deserialized correctly when the whole object
      was serialized.  [ticket:1426]

    - Fixed bug whereby session.is_modified() would raise an exception
      if any synonyms were in use.
      
    - Fixed Query being able to join() from individual columns of
      a joined-table subclass entity, i.e.
      query(SubClass.foo, SubcClass.bar).join(<anything>).
      In most cases, an error "Could not find a FROM clause to join 
      from" would be raised. In a few others, the result would be 
      returned in terms of the base class rather than the subclass - 
      so applications which relied on this erroneous result need to be 
      adjusted. [ticket:1431]

    - Fixed bug whereby list-based attributes, like pickletype
      and PGArray, failed to be merged() properly.
      
    - The "foreign_keys" argument of relation() will now propagate
      automatically to the backref in the same way that
      primaryjoin and secondaryjoin do.   For the extremely 
      rare use case where the backref of a relation() has 
      intentionally different "foreign_keys" configured, both sides
      now need to be configured explicity (if they do in fact require
      this setting, see the next note...).  
      
    - ...the only known (and really, really rare) use case where a 
      different foreign_keys setting was used on the forwards/backwards 
      side, a composite foreign key that partially points to its own 
      columns, has been enhanced such that the fk->itself aspect of the 
      relation won't be used to determine relation direction.
     
    - repaired non-working attributes.set_committed_value function.

    - Trimmed the pickle format for InstanceState which should further
      reduce the memory footprint of pickled instances.  The format